Avoid scroll on mobile devices

--- a/src/components/Global/Nav/index.scss
+++ b/src/components/Global/Nav/index.scss
@@ -215,3 +215,20 @@
     }
   }
 }
+
+@media screen and (max-width: 992px) {
+  body.scroll-menu {
+    overflow: hidden;
+
+    .navbar-collapse {
+      overflow: scroll;
+      overflow-x: hidden;
+      height: 100vh;
+      padding-bottom: 8rem !important;
+
+      .mega-menu {
+        box-shadow: none;
+      }
+    }
+  }
+}
